# boolean-algebra-engine

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK_PLAN.md  DESIGN.md  Dockerfile  PRODUCT.md  PUBLISHING.md  README.md  TODO.md  analytics_notify.py  analytics_watch.py  arxiv-papers-boolean-algebra-engine.csv  benchmark.py  curve.py  curve_plot.py  dashboard.py  demo.py  docker-compose.yml  index.html  llms-full.txt  llms.txt  log.md  publish.sh  pyproject.toml  results_visualiser.ipynb  statements.md  thanks.html  visualisations.ipynb  waitlist.html
.github/workflows/: publish.yml
api/: routes.py
boolean_algebra_engine/: __init__.py
boolean_algebra_engine/api/: routes.py
boolean_algebra_engine/cli/: entry.py  main.py  telemetry.py
boolean_algebra_engine/mcp/: server.py
boolean_algebra_engine/nl/: nl.py
cli/: main.py
core/: __init__.py  evaluator.py  models.py  parser.py  synthesizer.py
docs/: BENCHMARK_PLAN.md  DEMO_EXPLAINED.md  INTERNAL.md  PRODUCT_DIRECTION.md  TODO.md  VARIABLE_CURVE.md  changelog.md  cli-reference.md  faq.md  getting-started.md  log.md  troubleshooting.md  visualise_results.py
mcp_server/: __init__.py  server.py
nl/: nl.py
scripts/: bootstrap-ec2.sh
src/: Calculator.java  Logics.java  StringParser.java
tests/: test_edge_cases.py  test_evaluator.py  test_integration.py  test_models.py  test_parser.py  test_synthesizer.py
ui/: analytics.py  app.py  fetchers.py
