[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boolean-algebra-engine"
version = "0.1.7"
description = "Deterministic logic layer for AI agents — catch logical contradictions in system prompts, rules, and agent reasoning"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
authors = [
    { name = "Aditya Shrivastava", email = "aditya.shrivastava.architect@proton.me" }
]
keywords = ["boolean", "algebra", "logic", "truth-table", "quine-mccluskey", "digital-logic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
cli = ["typer>=0.12.0", "rich>=13.0.0"]
mcp = ["mcp[cli]>=1.0.0"]
nl-anthropic = ["anthropic>=0.50.0"]
nl-openai = ["openai>=1.0.0"]
nl = ["anthropic>=0.50.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
api-cache = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "redis>=5.0.0"]
dev = ["pytest>=8.0.0", "httpx>=0.24.0", "z3-solver>=4.12.0"]

[project.scripts]
boolcalc = "cli.main:app"

[project.urls]
Homepage = "https://github.com/Shrivastava-Aditya/boolean-LLM-eval"
Repository = "https://github.com/Shrivastava-Aditya/boolean-LLM-eval"
Issues = "https://github.com/Shrivastava-Aditya/boolean-LLM-eval/issues"

[tool.setuptools.packages.find]
include = ["core*", "cli*", "mcp_server*", "api*", "nl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
