[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boolean-algebra-engine"
version = "0.3.11"
description = "Deterministic logic layer for AI agents — catch logical contradictions in system prompts, rules, and agent reasoning"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Aditya Shrivastava", email = "aditya.shrivastava.architect@proton.me" }
]
keywords = ["boolean", "algebra", "logic", "truth-table", "quine-mccluskey", "digital-logic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
cli = ["typer>=0.12.0", "rich>=13.0.0", "posthog>=3.0.0"]
mcp = ["mcp[cli]>=1.0.0"]
nl-anthropic = ["anthropic>=0.50.0"]
nl-openai = ["openai>=1.0.0"]
nl = ["anthropic>=0.50.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "slowapi>=0.1.9"]
api-cache = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "redis>=5.0.0", "slowapi>=0.1.9"]
dev = ["pytest>=8.0.0", "httpx>=0.24.0", "z3-solver>=4.12.0"]

[project.scripts]
boolcalc = "boolean_algebra_engine.cli.entry:entrypoint"

[project.urls]
Homepage = "https://github.com/Shrivastava-Aditya/bool-LLM-ngn"
Repository = "https://github.com/Shrivastava-Aditya/bool-LLM-ngn"
Issues = "https://github.com/Shrivastava-Aditya/bool-LLM-ngn/issues"

[tool.setuptools.packages.find]
include = ["boolean_algebra_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
