[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boolean-algebra-engine"
version = "0.3.19"
description = "Catch logic contradictions in AI prompts, rules, and compliance policies — deterministic truth table engine with MCP, CLI, and NL support"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Aditya Shrivastava", email = "aditya.shrivastava.architect@proton.me" }
]
keywords = [
    "boolean", "algebra", "logic", "truth-table", "quine-mccluskey", "digital-logic",
    "ai", "llm", "agent", "prompt", "contradiction", "rule-engine", "mcp",
    "compliance", "sat", "logic-verification", "soc2", "iso27001",
    "rule-conflict", "prompt-validation", "ai-safety"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
cli = ["typer>=0.12.0", "rich>=13.0.0", "posthog>=3.0.0"]
mcp = ["mcp[cli]>=1.0.0"]
nl-anthropic = ["anthropic>=0.50.0"]
nl-openai = ["openai>=1.0.0"]
nl = ["anthropic>=0.50.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "slowapi>=0.1.9"]
api-cache = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "redis>=5.0.0", "slowapi>=0.1.9"]
dev = ["pytest>=8.0.0", "httpx>=0.24.0", "z3-solver>=4.12.0"]
analytics = ["streamlit>=1.35.0", "python-dotenv>=1.0.0"]

[project.scripts]
boolcalc = "boolean_algebra_engine.cli.entry:entrypoint"

[project.urls]
Homepage = "https://github.com/Shrivastava-Aditya/boolean-algebra-engine"
Repository = "https://github.com/Shrivastava-Aditya/boolean-algebra-engine"
Documentation = "https://github.com/Shrivastava-Aditya/boolean-algebra-engine#readme"
Issues = "https://github.com/Shrivastava-Aditya/boolean-algebra-engine/issues"
Changelog = "https://github.com/Shrivastava-Aditya/boolean-algebra-engine/releases"

[tool.setuptools.packages.find]
include = ["boolean_algebra_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
